language/move-prover/tests/sources/functional/nested_invariants.exp
Move prover returns: exiting with boogie verification errors
error:  This assertion might not hold.

    ┌── tests/sources/functional/nested_invariants.move:16:9 ───
    │
 16 │         invariant x > 0;
    │         ^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/nested_invariants.move:63:5: mutate_inner_data_invariant_invalid (entry)
    =     at tests/sources/functional/nested_invariants.move:64:13: mutate_inner_data_invariant_invalid
    =     at tests/sources/functional/nested_invariants.move:65:17: mutate_inner_data_invariant_invalid
    =         o = <redacted>,
    =         r = <redacted>
    =     at tests/sources/functional/nested_invariants.move:66:17: mutate_inner_data_invariant_invalid
    =         r = <redacted>

error:  This assertion might not hold.

    ┌── tests/sources/functional/nested_invariants.move:32:9 ───
    │
 32 │         invariant n.x < y;
    │         ^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/nested_invariants.move:57:5: mutate_outer_data_invariant_invalid (entry)
    =     at tests/sources/functional/nested_invariants.move:58:13: mutate_outer_data_invariant_invalid
    =     at tests/sources/functional/nested_invariants.move:59:17: mutate_outer_data_invariant_invalid
    =         o = <redacted>,
    =         r = <redacted>
    =     at tests/sources/functional/nested_invariants.move:60:15: mutate_outer_data_invariant_invalid
    =         r = <redacted>

error:  This assertion might not hold.

    ┌── tests/sources/functional/nested_invariants.move:16:9 ───
    │
 16 │         invariant x > 0;
    │         ^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/nested_invariants.move:46:5: new_inner_data_invariant_invalid (entry)

error:  This assertion might not hold.

    ┌── tests/sources/functional/nested_invariants.move:32:9 ───
    │
 32 │         invariant n.x < y;
    │         ^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/nested_invariants.move:42:5: new_outer_data_invariant_invalid (entry)
